--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,24 @@
-<p>footer works!</p>
+
+
+<footer id="fh5co-footer" class="fh5co-bg bg-secondary" role="contentinfo" style="height: 200px">
+  <!--<div class="overlay"></div>
+  <div class="container">
+    <div class="row row-pb-md">
+      <div class="col-md-4 fh5co-widget">
+        <h3>A Little About Stamina.</h3>
+        <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+        <p><a class="btn btn-primary" href="#">Become A Member</a></p>
+      </div>-->
+
+
+
+
+    <div class="row copyright">
+      <div class="col-md-12 text-center">
+        <p>
+          <small class="block">&copy; 2020 | All Rights Reserved.</small>
+          <small class="block">Powered by  KilleuH912</small>
+        </p>
+      </div>
+    </div>
+</footer>
