--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,37 +1,47 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css">
-<div class="bg-info">
-  <!-- Container containing all contents -->
-  <div class="container">
+<div class="container justify-content-center centerForm">
+
+
     <div class="row justify-content-center">
-      <div class="col-10 col-md-9 col-lg-7 col-xl-6">
+      <div class="col-10 col-md-9 col-lg-7 col-xl-6 shadow-lg p-3 mb-5 bg-white rounded">
         <!-- White Container -->
         <div class="container bg-white rounded mt-2 mb-2 px-0">
           <!-- Main Heading -->
           <div class="row justify-content-center align-items-center pt-3">
-            <h1><strong>Login</strong></h1>
+            <div class="col text-center">
+              <img src="assets/images/sa.jpeg">
+            </div>
+
+
           </div>
-          <div class="pt-3 pb-3">
-            <form class="form-horizontal">
+          <div class="pt-3 pb-3 text-center" >
+            <form [formGroup]="loginForm"  class="form-horizontal mt-5" (ngSubmit)="onSubmit()">
               <!-- User Name Input -->
               <div class="form-group row justify-content-center px-3">
-                <div class="col-9 px-0"> <input type="text" placeholder="&#xf007; &nbsp; User name" class="form-control border-info placeicon"> </div>
-              </div> <!-- Password Input -->
-              <div class="form-group row justify-content-center px-3">
-                <div class="col-9 px-0"> <input type="password" placeholder="&#xf084; &nbsp; &#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" class="form-control border-info placeicon"> </div>
-              </div> <!-- CheckBox Remember Me-->
-              <div class="form-group row justify-content-center px-3">
-                <div class="col-9">
-                  <div class="row">
-                    <div class="col-6 px-0">
-                      <div class="custom-control custom-checkbox mb-3"> <input id="customCheck1" type="checkbox" class="custom-control-input checkbox-muted"> <label for="customCheck1" class="custom-control-label text-muted">Remember Me</label> </div>
-                    </div> <!-- Forgot Password Link -->
-                    <div class="col-6 px-0 text-right"> <span><a href="#" class="text-danger"><b>Forgot Password?</b></a></span> </div>
-                  </div>
+                <div class="col-9 px-0">
+                  <input type="text"
+                         placeholder="&#xf007; &nbsp;"
+                         class="form-control border-info placeicon"
+                         [formControlName]="'login'"
+                  >
+                  <small *ngIf="!isValidUser && submitted" style="color: red"> Login Or Password incorrect</small>
+
                 </div>
-              </div> <!-- Log in Button -->
+              </div>
+
+              <div class="form-group row justify-content-center px-3">
+                <div class="col-9 px-0">
+                  <input type="password"
+                         placeholder="&#xf084; &nbsp;"
+                         class="form-control border-info placeicon"
+                         [formControlName]="'password'"
+                  >
+                </div>
+              </div>
+
               <div class="form-group row justify-content-center">
                 <!--div class="col-3 px-3"> <input type="submit" value="Log in" class="btn btn-block btn-info"> </div-->
-               <input type="submit" class="btn btn-info " style="width: 80%" value="Connexion">
+                <button class="btn bg-danger"
+                     [disabled]="!loginForm.valid"   style="width: 80%; background-color: orange">Connexion </button>
               </div>
             </form>
           </div> <!-- Alternative Login -->
@@ -39,4 +49,4 @@
       </div>
     </div>
   </div>
-</div>
+
