--- a/src/app/users/users-add/users-add.component.css
+++ b/src/app/users/users-add/users-add.component.css
@@ -1,8 +1,20 @@
-input {
-  outline: 0;
-  border-width: 0 0 1px;
-  border-color: gray;
+
+.imgavatar{
+  width: 100px;
+  float: right;
+  margin-right: 2%;
+  height: 100px;
+  border-radius: 50%;
+  border: 1px solid black;
+
+
 }
-input:focus {
-  border-color: aqua;
+.avatarprofil{
+  width: 100%;
+  height: 50%;
+  border-radius: 50%;
+  float: left;
+}
+small{
+  color: red;
 }
