--- a/src/app/users/users-list/users-list.component.css
+++ b/src/app/users/users-list/users-list.component.css
@@ -1,3 +1,4 @@
+/*
 body {
   color: #566787;
   background: #f5f5f5;
@@ -138,7 +139,7 @@ table.table .avatar {
   margin-top: 10px;
   font-size: 13px;
 }
-/* Custom checkbox */
+!* Custom checkbox *!
 .custom-checkbox {
   position: relative;
 }
@@ -188,4 +189,8 @@ table.table .avatar {
   cursor: auto;
   box-shadow: none;
   background: #ddd;
+}
+*/
+.bntadd{
+  margin-left: 120px;
 }
